Fix spacing of list fields on entry page.
Includes a refactoring of list field templates such that the
whole list field corresponds to just one <li>.

--- a/src/mootiro_form/static/css/entry_creation.css
+++ b/src/mootiro_form/static/css/entry_creation.css
@@ -49,3 +49,15 @@ div#Footer hr {
 .imagePreview {
   background: #dadada url('../fieldtypes/ImageField/placeholder.png') no-repeat center center;
 }
+
+.deformFormFieldset {
+  margin: 0;
+  padding: 0;
+}
+.deform li {
+  padding: 0;
+}
+.OuterFields > li {
+  margin: 3px 0;
+  padding: 10px;
+}
